api somehow working, fix bugs before fully implementing security