@@ -12,6 +12,7 @@ import java.time.DayOfWeek;
 import java.time.LocalTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class EmployeeService {
@@ -22,27 +23,32 @@ public class EmployeeService {
     @Autowired
     private EmployeeMapper employeeMapper;
 
+
     public EmployeeResponseDto createEmployee(EmployeeRequestDto employeeRequestDto) {
-        if (employeeRepository.existsByEmail(employeeRequestDto.getEmail())) {
-            throw new IllegalStateException("Email already in use.");
-        }
-
-        EmployeeEntity employeeEntity = employeeMapper.toEntity(employeeRequestDto);
+        // Convert EmployeeRequestDto to EmployeeEntity, save it, and convert to EmployeeResponseDto
+        EmployeeEntity employeeEntity = new EmployeeEntity();
+        // Set properties from employeeRequestDto to employeeEntity
         employeeEntity = employeeRepository.save(employeeEntity);
-        return employeeMapper.toResponseDto(employeeEntity);
+        return toResponseDto(employeeEntity);
     }
 
-    public Optional<EmployeeResponseDto> getEmployeeByEmail(String email) {
-        return employeeRepository.findByEmail(email)
-                .map(employeeMapper::toResponseDto);
+    public Optional<EmployeeResponseDto> findByEmail(String email) {
+        return employeeRepository.findByEmail(email).map(this::toResponseDto);
     }
 
-    public List<EmployeeResponseDto> findAvailableEmployees(DayOfWeek dayOfWeek, LocalTime startTime, LocalTime endTime) {
-        return employeeRepository
-                .findByAvailabilityDayOfWeekAndAvailabilityStartTimeBeforeAndAvailabilityEndTimeAfter(dayOfWeek, startTime, endTime)
-                .stream()
-                .map(employeeMapper::toResponseDto)
-                .toList();
+    public boolean existsByEmail(String email) {
+        return employeeRepository.existsByEmail(email);
+    }
+
+    public List<EmployeeResponseDto> findByAvailability(DayOfWeek dayOfWeek, LocalTime startTime, LocalTime endTime) {
+        return employeeRepository.findBySchedules_DayOfWeekAndSchedules_StartTimeBeforeAndSchedules_EndTimeAfter(
+                dayOfWeek, startTime, endTime).stream().map(employeeMapper::toResponseDto).collect(Collectors.toList());
+    }
+
+    public EmployeeResponseDto toResponseDto(EmployeeEntity employeeEntity) {
+        EmployeeResponseDto dto = new EmployeeResponseDto();
+        // Set properties from employeeEntity to dto
+        return dto;
     }
 
     // Nieuwe methode om EmployeeEntity op te halen via ID
